[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/img/images/Rectangle 1.png" type="Texture" id=5]
[ext_resource path="res://assets/img/images/Rectangle Compuertas.png" type="Texture" id=6]
[ext_resource path="res://assets/img/images/Rectangle 6.png" type="Texture" id=7]
[ext_resource path="res://assets/img/images/Vector 3.png" type="Texture" id=8]
[ext_resource path="res://assets/img/images/Rectangle.png" type="Texture" id=9]
[ext_resource path="res://scenes/Draggable.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/img/images/Rectangle 8.png" type="Texture" id=11]
[ext_resource path="res://assets/img/images/Rectangle 9.png" type="Texture" id=12]
[ext_resource path="res://assets/img/images/Rectangle 5.png" type="Texture" id=13]
[ext_resource path="res://assets/img/images/Rectangle 5 (1).png" type="Texture" id=14]
[ext_resource path="res://assets/img/images/Ellipse 2.png" type="Texture" id=15]
[ext_resource path="res://assets/img/images/Vector 5.png" type="Texture" id=16]
[ext_resource path="res://assets/img/images/Polygon 2.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "TÃ­tulo del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteGate" type="Sprite" parent="."]
position = Vector2( 463, 715 )
texture = ExtResource( 5 )

[node name="SpriteTickets" type="Sprite" parent="."]
position = Vector2( 181.224, 347.346 )
texture = ExtResource( 6 )

[node name="SpriteZoneGate" type="Sprite" parent="."]
position = Vector2( 810, 344.126 )
texture = ExtResource( 9 )

[node name="SpriteTicketA" type="Sprite" parent="."]
position = Vector2( 551, 277.686 )
texture = ExtResource( 7 )

[node name="SpriteTicketB" type="Sprite" parent="."]
position = Vector2( 551, 390.327 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 658, 277.248 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 658, 392.68 )
texture = ExtResource( 8 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 962.289, 334.965 )
texture = ExtResource( 8 )

[node name="AND" parent="." instance=ExtResource( 10 )]
position = Vector2( 89.242, 716 )

[node name="Sprite2" type="Sprite" parent="AND"]
position = Vector2( 0.753543, -0.417183 )
scale = Vector2( 1.0407, 0.961387 )
texture = ExtResource( 11 )

[node name="NAND" parent="." instance=ExtResource( 10 )]
position = Vector2( 241.905, 715.635 )

[node name="Sprite2" type="Sprite" parent="NAND"]
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="NAND"]
position = Vector2( 48.4157, 0 )
texture = ExtResource( 15 )

[node name="OR" parent="." instance=ExtResource( 10 )]
position = Vector2( 393.095, 715.635 )

[node name="Sprite2" type="Sprite" parent="OR"]
texture = ExtResource( 13 )

[node name="XOR" parent="." instance=ExtResource( 10 )]
position = Vector2( 541.108, 714.576 )

[node name="Sprite2" type="Sprite" parent="XOR"]
position = Vector2( 7.41626, 1.05951 )
texture = ExtResource( 12 )

[node name="Sprite3" type="Sprite" parent="XOR"]
position = Vector2( -32.8433, 1.05945 )
texture = ExtResource( 16 )

[node name="NOR" parent="." instance=ExtResource( 10 )]
position = Vector2( 687.917, 715.635 )

[node name="Sprite2" type="Sprite" parent="NOR"]
texture = ExtResource( 14 )

[node name="NOT" parent="." instance=ExtResource( 10 )]
position = Vector2( 831.548, 715.635 )

[node name="Sprite2" type="Sprite" parent="NOT"]
texture = ExtResource( 17 )

[node name="Sprite3" type="Sprite" parent="NOT"]
position = Vector2( 49.6099, 0.313843 )
texture = ExtResource( 15 )
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
